--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "copy:html": "cp ./src/index.html ./out",
-    "copy:js": "cp ./src/main.js ./out",
-    "copy:images": "cp -r ./src/images ./out",
+    "copy:html": "cpx ./src/index.html ./out",
+    "copy:js": "cpx ./src/main.js ./out",
+    "copy:images": "cpx ./src/images ./out",
     "copy": "mkdirp out && npm-run-all -p copy:*",
     "watch:elm": "elm-live ./src/Main.elm --open --start-page=index.html --dir=out -- --output=./out/elm.js",
     "watch:sass": "node-sass --include-path scss ./src/sass/style.scss ./out/css/style.css --watch --quiet",
@@ -13,11 +13,11 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.5",
+    "cpx": "^1.5.0",
     "elm": "^0.19.0-no-deps",
     "elm-test": "^0.19.0-rev6",
     "elm-live": "^3.4.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
-  },
-  "dependencies": {}
+  }
 }
