--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "copy:html": "cpx ./src/index.html ./out",
     "copy:js": "cpx ./src/main.js ./out",
-    "copy:images": "cpx ./src/images/** ./out/images",
+    "copy:image": "mkdirp out/assets/image && cpx ./src/assets/image/* ./out/assets/image",
     "copy": "npm-run-all -p copy:*",
     "watch:elm": "elm-live ./src/Main.elm --open --start-page=index.html --dir=out -- --output=./out/elm.js --debug",
     "watch:sass": "node-sass --include-path scss ./src/sass/style.scss ./out/css/style.css --quiet --watch",
