--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "copy:html": "cpx ./src/index.html ./out",
-    "copy:js": "cpx ./src/main.js ./out",
-    "copy:image": "mkdirp out/assets/images && cpx ./src/assets/images/* ./out/assets/images",
-    "copy": "npm-run-all -p copy:*",
+    "copy:html": "ncp ./src/index.html ./out/index.html",
+    "copy:js": "ncp ./src/main.js ./out/main.js",
+    "copy:image": "ncp ./src/assets ./out/assets",
+    "copy": "mkdirp out && npm-run-all -p copy:*",
     "watch:elm": "elm-live ./src/Main.elm --open --start-page=index.html --dir=out -- --output=./out/elm.js --debug",
     "watch:sass": "npm run build:sass && node-sass -w --include-path scss ./src/style.scss ./out/style.css",
     "watch": "npm-run-all -p watch:*",
@@ -16,11 +16,11 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.5",
-    "cpx": "^1.5.0",
     "elm": "^0.19.0-no-deps",
     "elm-test": "^0.19.0-rev6",
     "elm-live": "^3.4.1",
     "node-sass": "^4.12.0",
+    "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5"
   }
 }
