--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "copy:html": "ncp ./src/index.html ./out/index.html",
     "copy:js": "ncp ./src/main.js ./out/main.js",
-    "copy:image": "ncp ./src/assets ./out/assets",
+    "copy:assets": "ncp ./src/assets ./out/assets",
     "copy": "mkdirp out && npm-run-all -p copy:*",
     "watch:elm": "elm-live ./src/Main.elm --open --start-page=index.html --dir=out -- --output=./out/elm.js --debug",
     "watch:sass": "npm run build:sass && node-sass -w --include-path scss ./src/style.scss ./out/style.css",
